multiplex_tool: Implement a register command protocol

--- a/mjlib/multiplex/BUILD
+++ b/mjlib/multiplex/BUILD
@@ -121,6 +121,7 @@ cc_binary(
         "//mjlib/io:stream_copy",
         "//mjlib/io:stream_factory",
         "@boost",
+        "@fmt",
     ],
 )
 
