Beginning work on an updated telemetry format
For now, document the format, and create archives that emit schemas and
binary serializations.

--- a/mjlib/telemetry/BUILD
+++ b/mjlib/telemetry/BUILD
@@ -1,6 +1,6 @@
 # -*- python -*-
 
-# Copyright 2018 Josh Pieper, jjp@pobox.com.
+# Copyright 2018-2019 Josh Pieper, jjp@pobox.com.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,6 +15,33 @@
 # limitations under the License.
 
 package(default_visibility = ["//visibility:public"])
+
+cc_library(
+    name = "format",
+    hdrs = [
+        "format.h",
+        "types.h",
+    ],
+    deps = [
+        "//mjlib/base:assert",
+        "//mjlib/base:time_conversions",
+        "//mjlib/base:system_error",
+        "@boost",
+    ],
+)
+
+cc_library(
+    name = "binary_write_archive",
+    hdrs = [
+        "binary_write_archive.h",
+    ],
+    deps = [
+        ":format",
+        "//mjlib/base:priority_tag",
+        "//mjlib/base:visitor",
+        "//mjlib/base:visit_archive",
+    ],
+)
 
 cc_library(
     name = "telemetry_format",
@@ -54,12 +81,20 @@ cc_library(
 cc_test(
     name = "test",
     srcs = [
+        "test/binary_write_archive_test.cc",
+        "test/format_test.cc",
         "test/telemetry_archive_test.cc",
         "test/test_main.cc",
+
+        "test/all_types_struct.h",
+        "test/test_util.h",
     ],
     deps = [
+        ":format",
+        ":binary_write_archive",
         ":telemetry_archive",
         ":telemetry_util",
         "@boost//:test",
+        "@fmt",
     ],
 )
