Create a stub unit test

--- a/mjlib/BUILD
+++ b/mjlib/BUILD
@@ -25,5 +25,6 @@ test_suite(
         "//mjlib/multiplex:test",
         "//mjlib/multiplex:py_test",
         "//mjlib/telemetry:test",
+        "//mjlib/telemetry/js:test",
     ],
 )
