Micro-optimize processing register requests
This mostly involves breaking some abstractions so that reads and
writes can be efficient when we know we're just dealing with a block
of raw memory.

--- a/mjlib/multiplex/BUILD
+++ b/mjlib/multiplex/BUILD
@@ -27,6 +27,7 @@ cc_library(
     deps = [
         ":format",
         "//mjlib/base:assert",
+        "//mjlib/base:buffer_stream",
         "//mjlib/base:stream",
     ],
 )
