Move all_types_struct from telemetry/test to base/test

--- a/mjlib/base/BUILD
+++ b/mjlib/base/BUILD
@@ -184,6 +184,13 @@ cc_library(
     ],
 )
 
+
+cc_library(
+    name = "all_types_struct",
+    hdrs = ["test/all_types_struct.h"],
+    deps = [":bytes"],
+)
+
 cc_test(
     name = "test",
     srcs = [
