ProgramOptionsArchive: Ignore vectors for now

--- a/mjlib/base/BUILD
+++ b/mjlib/base/BUILD
@@ -165,6 +165,7 @@ cc_library(
         "program_options_archive_detail.h",
     ],
     deps = [
+        ":priority_tag",
         ":visitor",
         ":visit_archive",
         "@boost//:program_options",
